feat: Enable Android support and update dependencies
This commit introduces Android target support to the project, allowing the libraries to be used in Android applications. It also includes several dependency updates and code refactorings.

Key changes:
*   **Android Target:**
    *   Enabled Android targets in `mpplib.gradle.kts` for both library and native compilations (`androidTarget`, `androidNativeArm32`, `androidNativeArm64`).
    *   Configured the Android library plugin in `common.gradle.kts`, setting namespace, SDK versions, and Java compatibility.
    *   Added Android Gradle Plugin (`com.android.tools.build:gradle:8.2.0`) and `atomicfu` dependencies.
    *   Updated `buildSrc` and root `settings.gradle.kts` to include Google's Maven repository.

*   **Dependency Upgrades:**
    *   Kotlin: `1.9.23` -> `2.1.21`
    *   Coroutines: `1.8.0` -> `1.10.0`
    *   Kotlinx Datetime: `0.5.0` -> `0.6.2`
    *   Replaced the `atomicfu` Gradle plugin with the `org.jetbrains.kotlinx.atomicfu` plugin applied at the root.

*   **New Features & Extensions:**
    *   `ConsoleSpanExporter`: A new exporter in `sdk-trace` to print span data to the console for debugging.
    *   `Span.use` Extension: Added a `suspend` extension function for `Span` to ensure `end()` is called, similar to a `try-with-resources` pattern.

*   **Code Refinements & Fixes:**
    *   Replaced `kotlinx.datetime.Instant` with `kotlin.time.Instant`.
    *   Simplified and refactored various metric aggregators, renaming parameters for clarity (e.g., `previous` to `previousCumulative`, `current` to `delta`).
    *   Cleaned up SdkCounter implementations by renaming `increment` to `value`.
    *   Made constructors of `MeterSelector.Builder`, `InstrumentSelector.Builder`, and `TestSpanData` public.
    *   Removed the unused `javalib.gradle.kts` convention plugin.

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,9 +7,9 @@ kotlin.incremental.js.ir=true
 org.gradle.caching=true
 kotlin.code.style=official
 kotlin.native.ignoreDisabledTargets=true
-kotlin.native.ignoreIncorrectDependencies=true
 kotlin.native.cacheKind.linuxX64=none
 kotlin.js.generate.executable.default=false
 kotlin.mpp.stability.nowarn=true
 kotlin.native.binary.memoryModel=experimental
 compileNative=true
+kotlin.suppressGradlePluginWarnings=IncorrectCompileOnlyDependencyWarning
