--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,13 @@
 [versions]
 kotlin = "2.1.21"
 kotlinxCoroutines =  "1.10.0"
-agp = "8.12.2"
+agp = "8.11.1"
 kotlinStdlib = "2.1.21"
 runner = "1.5.2"
 core = "1.5.0"
 junit = "1.3.0"
+ktor = "3.2.3"
+junitVersion = "1.3.0"
 
 [libraries]
 benasher44-uuid = "com.benasher44:uuid:0.8.4"
@@ -15,6 +17,12 @@ gradleplugin-kotlinx-serialization = { module = "org.jetbrains.kotlin:kotlin-ser
 kotlin-test-annotations-common = { module = "org.jetbrains.kotlin:kotlin-test-annotations-common", version.ref = "kotlin" }
 kotlin-test-common = { module = "org.jetbrains.kotlin:kotlin-test-common", version.ref = "kotlin" }
 kotlin-test-main = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
+ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
+ktor-client-cio = { module = "io.ktor:ktor-client-cio", version.ref = "ktor" }
+ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktor" }
+ktor-client-darwin = { module = "io.ktor:ktor-client-darwin", version.ref = "ktor" }
+kotlinx-io-core = { module = "org.jetbrains.kotlinx:kotlinx-io-core", version = "0.8.0" }
+android-gradle-plugin = { module = "com.android.tools.build:gradle", version.ref = "agp" }
 
 jetbrains-kotlinx-collections-immutable = "org.jetbrains.kotlinx:kotlinx-collections-immutable:0.3.7"
 jetbrains-kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinxCoroutines" }
@@ -26,7 +34,9 @@ kotest-assertions-core = "io.kotest:kotest-assertions-core:5.8.1"
 kotlin-stdlib = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib", version.ref = "kotlinStdlib" }
 runner = { group = "androidx.test", name = "runner", version.ref = "runner" }
 core = { group = "androidx.test", name = "core", version.ref = "core" }
-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junit" }
+junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
+
+kotlinx-serialization-proto ={ module = "org.jetbrains.kotlinx:kotlinx-serialization-protobuf", version = "1.9.0" }
 
 [bundles]
 kotlin-test = ["kotlin-test-main", "kotlin-test-common", "kotlin-test-annotations-common"]
